force-app/main/default/objects/QualtricsSurvey__mdt/QualtricsSurvey__mdt.object-meta.xml
<CustomObject>
    <description>Contains all the case record type exclusion list with category and subcategory</description>
    <label>QualtricsSurvey</label>
    <pluralLabel>QualtricsSurveys</pluralLabel>
</CustomObject>