force-app/main/default/objects/QualtricsSurvey__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>