force-app/main/default/objects/QualtricsSurvey__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Group__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>